--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1">
+    <title>Mi portofolio</title>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <script src="app.js"></script>
+    <div id="nav-placeholder"></div>
+    <div class="wrapper">
+        <div class="header">
+            <h1 class="title">Hola! Soy Ale, </h1>
+            <h2 class="subtitle"> Ingeniero informático con mención en Tecnologías de la Información.
+            </h2>
+        </div>
+        <div class="image-container">
+            <img src="img/ale.jpg" alt="Imagen de mi persona" class="main-img">
+        </div>
+    </div>
+</body>
+
+</html>
