Cambio paleta de color y posición de las secciones

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div id="myinfo">
         <p id="name">Alejandro García Amador</p>
         <span
-          >Muy buenas, soy Ingeniero informático con mención en tecnologías de
+          >Hola! Soy Ingeniero informático con mención en tecnologías de
           la información, con experiencia en proyectos grupales desarrollo de
           aplicaciones para Android e IOS, desarrollo de APIs e intranets en
           Laravel, adquiridos durante nueves meses en prácticas de empresa.
