Mejora sección formación

--- a/index.html
+++ b/index.html
@@ -45,15 +45,29 @@
     </section>
     <section id="cvitae">
       <div class="row">
-        <img src="icons/school_black_24dp.svg" alt="" class="icon">
-        <div class="box">
-          <p class="title">Formación</p>
+        <div class="title">
+          <img src="icons/school_black_24dp.svg" alt="" class="icon">
+          <p >Formación</p>
+        </div>
+        <div class="box shadow-right">
           <ul>
-            <li>Gradro en Ingeniería Informática <br><span class="subtitle">Mención en Teconologías de la Información</span></span></li>
+            <li>Grado en Ingeniería Informática <br><span class="subtitle">Mención en Teconologías de la Información</span></span></li>
             <li>Bachillerato Tecnológico <br><span class="subtitle">Colegio Nuestra Señora del Pilar Jerez de la Frontera</span></li>
           </ul>
         </div>
       </div>
+      <div class="row">
+
+        <div class="box shadow-right">
+          <ul>
+            <li>Grado en Ingeniería Informática <br><span class="subtitle">Mención en Teconologías de la Información</span></span></li>
+            <li>Bachillerato Tecnológico <br><span class="subtitle">Colegio Nuestra Señora del Pilar Jerez de la Frontera</span></li>
+          </ul>
+        </div>
+        <div class="title">
+          <img src="icons/school_black_24dp.svg" alt="" class="icon">
+          <p >Formación</p>
+        </div>
     </section>
     <section id="projects"></section>
     <section id="contact"></section>
