Contacto y finalización formación

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <!-- texts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sanchez" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code" />
   <!-- subtitles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
-  <!-- titles -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta+Vaani" />
   <script src="app.js"></script>
+  <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
   <title>Mi portfolio</title>
 </head>
 
@@ -26,7 +25,7 @@
   <section id="aboutme">
     <div id="myinfo">
       <p id="name">Alejandro García Amador</p>
-      <span>Hola! Soy Ingeniero informático con mención en tecnologías de
+      <span>Soy Ingeniero informático con mención en tecnologías de
         la información, con experiencia en proyectos grupales desarrollo de
         aplicaciones para Android e IOS, desarrollo de APIs e intranets en
         Laravel, adquiridos durante nueves meses en prácticas de empresa.
@@ -39,7 +38,7 @@
   <section id="cvitae">
     <div class="row">
       <div class="title">
-        <img src="icons/school_black_24dp.svg" alt="" class="icon">
+        <img src="icons/school_black_24dp.svg" alt="" class="icon purple">
         <p>Estudios</p>
       </div>
       <div class="box shadow-right">
@@ -64,13 +63,13 @@
         </ul>
       </div>
       <div class="title">
-        <img src="icons/business.svg" alt="" class="icon">
+        <img src="icons/business.svg" alt="" class="icon purple">
         <p>Experiencia laboral</p>
       </div>
     </div>
     <div class="row">
       <div class="title">
-        <img src="icons/workspace_premium_black_24dp.svg" alt="" class="icon">
+        <img src="icons/workspace_premium_black_24dp.svg" alt="" class="icon purple">
         <p>Certificados</p>
       </div>
       <div class="box shadow-right">
@@ -83,9 +82,52 @@
         </ul>
       </div>
     </div>
+    <div class="row">
+      <div class="box shadow-left">
+        <div class="skillsbox">
+          <span>JavaScript</span>
+          <span>Angular</span>
+          <span>PHP</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>C++</span>
+          <span>Java</span>
+        </div>
+      </div>
+      <div class="title">
+        <img src="icons/stars_black_24dp.svg" alt="" class="icon purple">
+        <p>Conocimientos</p>
+      </div>
+    </div>
   </section>
-  <section id="projects"></section>
-  <section id="contact"></section>
+  <section id="projects">
+    <div id="gif">
+      <lord-icon src="https://cdn.lordicon.com/etwtznjn.json" trigger="loop" colors="primary:#fffffe,secondary:#7f5af0"
+        style="width:250px;height:250px">
+      </lord-icon>
+    </div>
+    <p class="title">Nuevas cosas en camino...</p>
+  </section>
+  <section id="contact">
+    <div class="linksgroup">
+      <div class="link">
+        <img src="icons/linkedin.png" alt="" class="linkicon"><a rel='noreferrer' target="_blank"
+          href="https://www.linkedin.com/in/alejandro-garcia-amador" class="link">Linkedin</a>
+      </div>
+      <div class="link">
+        <img src="icons/GitHub-Mark-Light-64px.png" alt="" class="linkicon"><a target="_blank"
+          href="https://github.com/Cocomanso" class="link">GitHub</a>
+      </div>
+      <div class="link">
+        <img src="icons/mail_black_24dp.svg" alt="" class="linkicon purple"><a target="_blank"
+          href="mailto:alegarciaamador@gmail.com" class="link">alegarciaamador@gmail.com</a>
+      </div>
+      <div class="link">
+        <img src="icons/phone_iphone_FILL0_wght400_GRAD0_opsz48.svg" alt="" class="linkicon purple"><a target="_blank"
+          href="tel:634250446" class="link">634250446</a>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
