Mejorada sección contacto y añadido projecto

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
           <span>PHP</span>
           <span>HTML</span>
           <span>CSS</span>
+          <span>Git</span>
+          <span>SQL</span>
           <span>C++</span>
           <span>Java</span>
         </div>
@@ -101,28 +103,38 @@
     </div>
   </section>
   <section id="projects">
+
+    <div class="projectbox">
+      <a href="https://github.com/Agamador/Meeseeks" target="_blank">
+        <img src="img/Meeseeks_front.png" alt="Project screenshot" class="projectimg">
+        <p class="projecttitle">
+          TFG - Videojuego 2D de estrategia en la resolución de puzles en Godot
+        </p>
+      </a>
+    </div>
     <div id="gif">
       <lord-icon src="https://cdn.lordicon.com/etwtznjn.json" trigger="loop" colors="primary:#fffffe,secondary:#7f5af0"
         style="width:250px;height:250px">
       </lord-icon>
     </div>
     <p class="title">Nuevas cosas en camino...</p>
+
   </section>
   <section id="contact">
     <div class="linksgroup">
-      <div class="link">
+      <div class="linkbox">
         <img src="icons/linkedin.png" alt="" class="linkicon"><a rel='noreferrer' target="_blank"
           href="https://www.linkedin.com/in/alejandro-garcia-amador" class="link">Linkedin</a>
       </div>
-      <div class="link">
+      <div class="linkbox">
         <img src="icons/GitHub-Mark-Light-64px.png" alt="" class="linkicon"><a target="_blank"
           href="https://github.com/Cocomanso" class="link">GitHub</a>
       </div>
-      <div class="link">
+      <div class="linkbox">
         <img src="icons/mail_black_24dp.svg" alt="" class="linkicon purple"><a target="_blank"
           href="mailto:alegarciaamador@gmail.com" class="link">alegarciaamador@gmail.com</a>
       </div>
-      <div class="link">
+      <div class="linkbox">
         <img src="icons/phone_iphone_FILL0_wght400_GRAD0_opsz48.svg" alt="" class="linkicon purple"><a target="_blank"
           href="tel:634250446" class="link">634250446</a>
       </div>
