--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="box shadow-right">
         <ul>
-          <li>Grado en Ingeniería Informática <br><span class="date">09/2017 - 07/2022 </span><span
+          <li>Grado en Ingeniería Informática UCA<br><span class="date">09/2017 - 07/2022 </span><span
               class="subtitle">Mención en Teconologías de la Información</span></span></li>
           <li>Bachillerato Tecnológico <br><span class="date">09/2015 - 06/2017 </span><span class="subtitle">Colegio
               Nuestra Señora del Pilar Jerez de la Frontera</span></li>
@@ -128,7 +128,7 @@
       </div>
       <div class="linkbox">
         <img src="icons/GitHub-Mark-Light-64px.png" alt="" class="linkicon"><a target="_blank"
-          href="https://github.com/Cocomanso" class="link">GitHub</a>
+          href="https://github.com/Agamador" class="link">GitHub</a>
       </div>
       <div class="linkbox">
         <img src="icons/mail_black_24dp.svg" alt="" class="linkicon purple"><a target="_blank"
